--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,9 +1,10 @@
 {
   "@@locale": "en",
-  "counterAppBarTitle": "Counter",
-  "@counterAppBarTitle": {
-    "description": "Text shown in the AppBar of the Counter Page"
-  },
+  "emailLabelText": "Email",
+  "passwordLabelText": "Password",
+  "emailHintText": "Enter your email",
+  "passwordHintText": "Enter your password",
+  "logInButtonText": "Log in",
   "invalidEmail": "Invalid Email Address",
   "invalidPassword": "Password must be at least 8 characters and contain at least one letter and number",
   "confirmPasswordMismatch": "Password confirmation not match"
