--- a/lib/core/l10n/app_uk.arb
+++ b/lib/core/l10n/app_uk.arb
@@ -41,5 +41,8 @@
   "groupLabelText": "Група",
   "groupErrorText": "Введіть групу",
   "universityLabelText": "Університет",
-  "universityErrorText": "Введіть назву університету"
+  "universityErrorText": "Введіть назву університету",
+
+  "create": "Створити",
+  "tableTitle": "Таблиця"
 }
