Add table name provider

--- a/lib/core/l10n/app_en.arb
+++ b/lib/core/l10n/app_en.arb
@@ -44,5 +44,8 @@
   "universityErrorText": "Enter university's name",
 
   "create": "Create",
-  "tableTitle": "Table"
+  "tableTitle": "Table",
+
+  "tableNameLabelText": "Table name",
+  "tableNameErrorText": "Enter table name"
 }
