--- a/lib/core/l10n/app_uk.arb
+++ b/lib/core/l10n/app_uk.arb
@@ -44,5 +44,8 @@
   "universityErrorText": "Введіть назву університету",
 
   "create": "Створити",
-  "tableTitle": "Таблиця"
+  "tableTitle": "Таблиця",
+
+  "tableNameLabelText": "Назва таблиці",
+  "tableNameErrorText": "Введіть назву таблиці"
 }
