Implement language switching

--- a/lib/core/l10n/app_uk.arb
+++ b/lib/core/l10n/app_uk.arb
@@ -47,5 +47,9 @@
   "tableTitle": "Таблиця",
 
   "tableNameLabelText": "Назва таблиці",
-  "tableNameErrorText": "Введіть назву таблиці"
+  "tableNameErrorText": "Введіть назву таблиці",
+  
+  "language": "Мова",
+  "enLang": "Англійська",
+  "uaLang": "Українська"
 }
