--- a/lib/core/l10n/app_en.arb
+++ b/lib/core/l10n/app_en.arb
@@ -47,5 +47,9 @@
   "tableTitle": "Table",
 
   "tableNameLabelText": "Table name",
-  "tableNameErrorText": "Enter table name"
+  "tableNameErrorText": "Enter table name",
+
+  "language": "Language",
+  "enLang": "English",
+  "uaLang": "Ukrainian"
 }
