--- a/lib/core/l10n/app_uk.arb
+++ b/lib/core/l10n/app_uk.arb
@@ -51,5 +51,9 @@
   
   "language": "Мова",
   "enLang": "Англійська",
-  "uaLang": "Українська"
+  "uaLang": "Українська",
+
+  "exportToExcel": "Експортувати в Excel",
+  "updateTable": "Оновити таблицю",
+  "deleteTable": "Видалити таблицю"
 }
