--- a/lib/core/l10n/app_en.arb
+++ b/lib/core/l10n/app_en.arb
@@ -51,5 +51,9 @@
 
   "language": "Language",
   "enLang": "English",
-  "uaLang": "Ukrainian"
+  "uaLang": "Ukrainian",
+
+  "exportToExcel": "Export to Excel",
+  "updateTable": "Update table",
+  "deleteTable": "Delete table"
 }
