--- a/lib/core/l10n/app_en.arb
+++ b/lib/core/l10n/app_en.arb
@@ -55,5 +55,6 @@
 
   "exportToExcel": "Export to Excel",
   "updateTable": "Update table",
-  "deleteTable": "Delete table"
+  "deleteTable": "Delete table",
+  "addStudent": "Add student"
 }
